objects/User_Contact_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Related_Contact__r.Account.Your_Accounts__c</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Related_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <formula>TEXT(Related_Contact__r.Contact_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lanyon_Migrated_ID__c</fullName>
        <externalId>true</externalId>
        <label>Lanyon Migrated ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Source ID</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <formula>IF(User__r.ContactId= Related_Contact__r.Id , TRUE, FALSE)</formula>
        <label>Primary?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>User Contact Relations</relationshipLabel>
        <relationshipName>User_Contact_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SSO_User_ID__c</fullName>
        <description>Should contain the value of external</description>
        <externalId>true</externalId>
        <label>Single SignOn Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System_Id__c</fullName>
        <description>For Lanyon Migration data only</description>
        <label>Source System Id</label>
        <length>225</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Super_User__c</fullName>
        <formula>Related_Contact__r.Super_User__c</formula>
        <label>Super User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Portal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Contact_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <formula>User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username/Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <description>This object is used to maintain relationships between Portal User and their Contact records. This way portal user can be related to multiple contacts and will be able to manage cases for all the contacts that share same email Id.</description>
    <label>User Contact Relation</label>
    <nameField>
        <displayFormat>UC-{00000000}</displayFormat>
        <label>Unique Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Contact Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Username__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>SSO_User_ID__c</columns>
        <columns>Primary__c</columns>
        <columns>Super_User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>Related_Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Username__c</columns>
        <columns>Contact_Email__c</columns>
        <columns>Contact_Status__c</columns>
        <columns>Primary__c</columns>
        <columns>SSO_User_ID__c</columns>
        <columns>Super_User__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>View All</label>
    </listViews>
</CustomObject>